--- a/src/styles/template-parts-styles/post-file.scss
+++ b/src/styles/template-parts-styles/post-file.scss
@@ -3,15 +3,14 @@
 .post-box {
   padding: 24px 16px;
   box-shadow: 0px 4px 11px 0px rgba(137, 137, 137, 0.25);
-  display: flex;
-  flex-direction: column;
   @media screen and (min-width: $tablet) {
-    flex-direction: row;
+    display: flex;
     padding: 0;
-    max-width: 688px;
+    height: 343px;
+    max-width: fit-content;
   }
   @media screen and (min-width: $desktop) {
-    max-width: 960px;
+    max-width: fit-content;
   }
 }
 
@@ -26,30 +25,31 @@
 }
 
 .feature-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-bottom: 24px;
   @media screen and (min-width: $tablet) {
     margin-bottom: 0;
-    max-width: 332px;
-    max-height: 343px;
+    width: 332px;
   }
   @media screen and (min-width: $tablet) {
-    max-width: 342px;
-    max-height: 342px;
+    width: 342px;
   }
 }
 
 .feature-image__link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  width: 100%;
 }
 
 .description {
   @media screen and (min-width: $tablet) {
     padding: 20px 20px 0 24px;
+    width: 356px;
   }
   @media screen and (min-width: $desktop) {
     padding: 24px 64px 0;
+    width: 618px;
   }
 }
 
@@ -69,6 +69,9 @@
   font-size: 20px;
   font-weight: 500;
   margin: 0;
+  @media screen and (min-width: $tablet) {
+    margin-bottom: 24px;
+  }
   @media screen and (min-width: $desktop) {
     font-size: 22px;
   }
