--- a/src/styles/template-parts-styles/need-help-animals.scss
+++ b/src/styles/template-parts-styles/need-help-animals.scss
@@ -1,55 +1,46 @@
 @import "../variables.scss";
 
 .help-animals {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	gap: 32px;
+	position: relative;
 	margin-left: -16px;
 	margin-right: -16px;
-	padding: 192px 16px;
-	background-size: cover;
-	background-position: center;
-    margin-top: 65px;
-
-	background-image: url(../../images/need-help-image.jpg);
-
-	@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-		background-image: url(../../images/need-help-mobile.jpg);
-	}
+	margin-top: 65px;
+    height: 500px;
 
 	@media screen and (min-width: $tablet) {
 		margin: 0;
-		padding: 120px 16px;
-        margin-top: 80px;
-		background-image: url(../../images/need-help-tablet.jpg);
-
-		@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-			background-image: url(../../images/need-help-tablet.jpg);
-		}
+		margin-top: 80px;
+		height: auto;
+		
 	}
 
 	@media screen and (min-width: $desktop) {
-        background-image: url(../../images/need-help-desktop.jpg);
-		padding: 267px 16px;
         margin-top: 132px;
-        gap: 45px;
-
 	}
 
     @media screen and (min-width: $full) {
-    background-image: url(../../images/need-help-hd.png);
-    margin-top: 63px;
-	height: 900px;
+        margin-top: 63px;
+	    height: 900px;
   }
 }
 
+.help-animals__img{
+	
+		width: 100%;
+		height: 100%;
+		object-fit: cover;	
+	
+}
 .help-animals__title {
-	margin: 0;
+	position: absolute;
+	margin: -45px 0 0 -3px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 303px;
 	color: $white;
 	font-size: 32px;
-	font-weight: 600;
+	font-weight: 400;
 	line-height: 1;
 
 	@media screen and (max-width: $mobile) {
@@ -59,42 +50,55 @@
 	@media screen and (min-width: $tablet) {
 		font-size: 40px;
 		line-height: 1.4;
+		font-weight: 400;
+		width: 384px;
+		-webkit-text-stroke-width: thin;
+		margin: -41px 0 0 -1px;
 	}
 
 	@media screen and (min-width: $desktop) {
 		font-size: 48px;
+		width: 489px;
+		webkit-text-stroke-width: thin;
+        margin: -58px 0 0 20px
 	}
 
 	@media screen and (min-width: $full) {
 		font-size: 72px;
-		margin-top: -6px;
+		margin-top: -64px;
 		margin-bottom: 8px;
+		width: 692px;
 	}
 }
 
 .help-animals__button {
 	color: $main-blue;
 	background-color: $yellow;
-
-	@media screen and (min-width: $mobile) {
-		width: 311px;
-	}
-
+	width: 311px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	margin-top: 30px;
+	
 	@media screen and (min-width: $tablet) {
 		width: 332px;
+		top: 50%;
+		margin-top: 46px;
 	}
 
 	@media screen and (min-width: $desktop) {
 		width: 296px;
 		font-size: 25px;
-		margin-top: 4px;
-		margin-left: -3px;
+		margin-top: 55px;
+		margin-left: 1px;
 	}
 
 	@media screen and (min-width: $full) {
 		width: 358px;
 		font-size: 28px;
 		height: 70px;
+		margin-top: 76px;
 	}
 
 	&:hover,
