--- a/src/styles/template-styles/about.scss
+++ b/src/styles/template-styles/about.scss
@@ -226,7 +226,7 @@ p {
 .work__img{
   min-width: 343px;
   margin-top: 40px;
-  margin-bottom: 39px;
+  margin-bottom: 1px;
   display: flex;
   justify-content: center;
   min-height: 267px;
@@ -350,6 +350,7 @@ p {
   margin-top: 30px;
   margin-bottom: 64px;
   margin-left: 16px;
+  width: 311px;
 
   &:hover,
   &:focus {
@@ -432,7 +433,7 @@ p {
   }
     
 .description__animals {
-    margin-top: 4px;
+    margin-top: 6px;
 
     @media screen and (min-width: $tablet) {
       margin-top: 5px;
