--- a/src/styles/template-parts-styles/content.scss
+++ b/src/styles/template-parts-styles/content.scss
@@ -1,3 +1,5 @@
+@import "../variables.scss";
+
 .single-post__title {
   font-size: 28px;
   font-weight: 600;
@@ -10,12 +12,15 @@
 .single-post__description {
   font-size: 18px;
   line-height: 1.4;
+  margin-bottom: 32px;
   @media screen and (min-width: $tablet) {
     font-size: 16px;
     width: 609px;
+    margin-bottom: 40px;
   }
   @media screen and (min-width: $desktop) {
     font-size: 18px;
     width: 850px;
+    margin-bottom: 56px;
   }
 }
