--- a/src/styles/template-parts-styles/post-file.scss
+++ b/src/styles/template-parts-styles/post-file.scss
@@ -29,6 +29,8 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 24px;
+  position: relative;
+  overflow: hidden;
   @media screen and (min-width: $tablet) {
     margin-bottom: 0;
     width: 332px;
