fixed query in single.php, added hover and focus effects on interactive elements, made slider on content-post page

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -215,6 +215,14 @@ ul.mob-menu__social {
 
 .icon-socials {
   fill: $main-blue;
+  transition: $transition-function;
+}
+
+.social__item:hover,
+.social__item:focus {
+  .icon-socials {
+    transform: scale(1.1);
+  }
 }
 
 // Help menu button
