--- a/src/styles/template-styles/home.scss
+++ b/src/styles/template-styles/home.scss
@@ -268,6 +268,10 @@
 	@media screen and (min-width: $tablet) {
 		margin-right: -40px;
 	}
+
+	@media screen and (min-width: $desktop) {
+		margin-right: -75px;
+	}
 }
 
 @media screen and (min-width: $tablet) {
