fixed single.php and content-post.php

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -25,7 +25,7 @@ button {
   width: 174px;
   height: 40px;
 
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: 1200px) {
     width: 200px;
     height: 46px;
   }
@@ -46,17 +46,17 @@ button {
     margin-top: 64px;
   }
 
-  @media screen and (max-width: 1439px) {
+  @media screen and (max-width: 1199px) {
     width: 100%;
   }
 
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: 1200px) {
     margin-top: 0;
   }
 }
 
 .menu__container {
-  @media screen and (max-width: 1439.98px) {
+  @media screen and (max-width: 1199px) {
     display: block;
     position: fixed;
     z-index: 9;
@@ -68,7 +68,7 @@ button {
     transform: translateX(100%);
     transition: transform $transition-function;
   }
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: 1200px) {
     display: flex;
     align-items: center;
   }
@@ -93,7 +93,7 @@ button {
     left: 0;
   }
 
-  @media screen and (min-width: $tablet) and (max-width: 1439px) {
+  @media screen and (min-width: $tablet) and (max-width: 1199px) {
     padding: 24px 20px 40px;
     border-radius: 8px;
     top: 30px;
@@ -102,7 +102,7 @@ button {
     box-shadow: 0px 4px 25px 0px rgba(44, 44, 44, 0.2);
   }
 
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: 1200px) {
     position: static;
     flex-direction: row;
     align-items: center;
@@ -112,6 +112,9 @@ button {
 }
 
 .menu__wrapper ul {
+  @media screen and (min-width: 1200px) {
+    margin-right: 40px;
+  }
   @media screen and (min-width: $desktop) {
     margin-right: 56px;
   }
@@ -140,7 +143,7 @@ button {
   border: none;
   background-color: transparent;
 
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: 1200px) {
     display: none;
   }
 }
@@ -156,7 +159,7 @@ button {
     color: $main-blue;
   }
 
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: 1200px) {
     font-size: 18px;
   }
 }
@@ -166,7 +169,7 @@ button {
 }
 
 .menu-item:last-child {
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: 1200px) {
     display: none;
   }
 }
@@ -176,12 +179,15 @@ button {
   @media screen and (min-width: $tablet) {
     margin-bottom: 44px;
   }
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: 1200px) {
     margin-bottom: 0;
   }
 }
 
 .menu-item:not(:first-child) {
+  @media screen and (min-width: 1200px) {
+    margin-left: 30px;
+  }
   @media screen and (min-width: $desktop) {
     margin-left: 48px;
   }
@@ -193,7 +199,7 @@ button {
   flex-direction: column;
   align-items: start;
 
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: 1200px) {
     align-items: center;
     flex-direction: row;
   }
@@ -204,7 +210,7 @@ ul.mob-menu__social {
   display: flex;
   justify-content: space-between;
 
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: 1200px) {
     display: none;
   }
 }
@@ -244,7 +250,7 @@ ul.mob-menu__social {
     margin-bottom: 32px;
   }
 
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: 1200px) {
     padding: 14px 24px;
     margin-bottom: 0;
     font-size: 16px;
@@ -257,8 +263,7 @@ ul.mob-menu__social {
   display: flex;
   font-size: 20px;
 
-  @media screen and (min-width: $desktop) {
-    width: 60px;
+  @media screen and (min-width: 1200px) {
     font-size: 18px;
   }
 }
@@ -269,7 +274,9 @@ ul.mob-menu__social {
   @media screen and (min-width: $tablet) {
     margin-right: 32px;
   }
-
+  @media screen and (min-width: 1200px) {
+    margin-right: 8px;
+  }
   @media screen and (min-width: $desktop) {
     margin-right: 12px;
   }
