--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,6 @@
 @import "./variables.scss";
-@import "./global.scss";
 @import "./general.scss";
+@import "./global.scss";
 @import "./header.scss";
 @import "./footer.scss";
+@import "./404.scss";
