--- a/src/styles/404.scss
+++ b/src/styles/404.scss
@@ -1,5 +1,42 @@
+.background-404 {
+  position: fixed;
+  top: -50%;
+  left: -50%;
+  width: 200%;
+  height: 200%;
+  @media screen and (min-width: 1200px) {
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.img-404 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  min-width: 50%;
+  min-height: 50%;
+  @media screen and (min-width: 1200px) {
+    min-width: 100%;
+    min-height: 100%;
+  }
+}
+
 .error-404 {
-  background-color: aquamarine;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   color: $white;
 }
 
@@ -8,37 +45,52 @@
   @media screen and (min-width: $tablet) {
     font-size: 24px;
   }
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: 1200px) {
     font-size: 28px;
+  }
+}
+
+.error-oops {
+  font-size: 100px;
+  font-weight: 900;
+  line-height: 1;
+  letter-spacing: 16.8px;
+  margin: 18px 0 35px;
+  @media screen and (min-width: $tablet) {
+    font-size: 140px;
+    margin: 12px 0 55px;
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: 227px;
+    line-height: 1;
+    letter-spacing: 27.24px;
+    margin: 8px 0 86px;
   }
 }
 
 .error-button {
   display: inline-block;
-  padding: 14px 32px;
-  margin-bottom: 39px;
+  padding: 26px 56px;
   text-align: center;
   width: fit-content;
-  background-color: $yellow;
-  border-radius: $btn-border-radius;
-
-  color: $main-blue;
-  font-size: 15px;
+  background-color: transparent;
+  border-radius: 6px;
+  border: 2px solid $white;
+  color: $white;
+  font-size: 14px;
   font-weight: 500;
-  line-height: 1;
-  order: -1;
-  @media screen and (min-width: $mobile) {
+  transition: $transition-function;
+
+  @media screen and (min-width: $tablet) {
     font-size: 18px;
   }
 
-  @media screen and (min-width: $tablet) {
-    margin-bottom: 32px;
+  @media screen and (min-width: 1200px) {
+    font-size: 24px;
   }
 
-  @media screen and (min-width: 1200px) {
-    padding: 14px 24px;
-    margin-bottom: 0;
-    font-size: 16px;
-    order: initial;
+  &:hover,
+  &:focus {
+    transform: scale(1.05);
   }
 }
