--- a/src/styles/template-parts-styles/post-file.scss
+++ b/src/styles/template-parts-styles/post-file.scss
@@ -70,7 +70,7 @@
 .post-title {
   font-size: 20px;
   font-weight: 500;
-  margin: 0;
+  margin-bottom: 16px;
   @media screen and (min-width: $tablet) {
     margin-bottom: 24px;
   }
