--- a/src/styles/template-styles/helpform.scss
+++ b/src/styles/template-styles/helpform.scss
@@ -30,11 +30,14 @@
 .helpform__title {
   font-size: 28px;
   font-weight: 600;
+  margin-bottom: 32px;
   @media screen and (min-width: $tablet) {
+    margin-bottom: 28px;
     line-height: 1;
     text-align: center;
   }
   @media screen and (min-width: $desktop) {
+    margin-bottom: 56px;
     font-size: 32px;
     text-align: left;
   }
@@ -87,7 +90,9 @@ textarea.contact__input {
   color: $grey;
   font-size: 14px;
   line-height: 1;
+  border: 1px solid #d6d6d6;
   border-radius: $btn-border-radius;
+  background-color: $white;
 }
 
 textarea.contact__input {
@@ -100,13 +105,14 @@ textarea.contact__input {
   font-size: 12px;
   font-weight: 300;
   line-height: 1;
-  margin: 17px 0 33px;
+  margin: 16px 0 32px;
   @media screen and (min-width: $tablet) {
+    margin: 18px 0 33px;
     font-size: 14px;
   }
   @media screen and (min-width: $desktop) {
+    margin: -10px 0 10px;
     font-size: 16px;
-    margin: 20px 0 40px;
   }
 }
 .check__wrap label {
