--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -6,19 +6,22 @@
     flex-direction: column;
     background-color: $bg-footer;
     border-top: 2px solid $main-blue;
+    padding-bottom: 65px;
 
     @media screen and (min-width: $tablet){
-        margin-top: 81px;
+        display: flex;
         flex-direction: row;
+        justify-content: flex-start;
+        margin-top: 81px;
         flex-wrap: nowrap;
-        justify-content: space-evenly;
     }
 
     @media screen and (min-width: $desktop){
         margin-top: 132px;
         flex-direction: row;
         flex-wrap: nowrap;
-        justify-content: flex-start;
+        justify-content: space-around;
+        display: flex;
     }
 
     @media screen and (min-width: $full){
@@ -38,14 +41,14 @@
 
     @media screen and (min-width: $tablet){
         margin-top: 29px;
-        padding-left: 11px;
-        margin-right: 44px;
-        margin-left: -41px;
+        margin-right: 32px;
+        margin-left: 22px;
     }
     @media screen and (min-width: $desktop){
         margin-top: 35px;
-        padding-left: 107px;
-        margin-right: 254px;
+        margin-left: 5px;
+        margin-right: 70px;
+        padding-left: 0px;
     }
 
     @media screen and (min-width: $full){
@@ -118,12 +121,13 @@ footer img.footer__logo{
     margin-top: 28px;
 
     @media screen and (min-width: $tablet){
-        margin-left: -62px;
+        margin-right: 55px;
         margin-top: 22px;
     }
     @media screen and (min-width: $desktop){
         margin-top: 42px;
-        margin-right: 184px;
+        margin-right: 43px;
+        margin-left: 0px;
     }
 
     @media screen and (min-width: $full){
@@ -155,7 +159,7 @@ footer img.footer__logo{
 li.footer__item:first-child{
 
     @media screen and (min-width: 1200px){
-        margin-left: 48px;
+        margin-left: 30px;
     }
     
 
@@ -190,8 +194,8 @@ li.footer__item:first-child{
     margin-top: 41px;
 
     @media screen and (min-width: $tablet){
-        margin-left: -17px;
         margin-top: 25px;
+        margin-left: 0px;
     }
 
     @media screen and (min-width: $desktop) {
@@ -244,6 +248,13 @@ li.footer__item:first-child{
     margin-right: 7px;
     width: 20px;
     height: 20px;
+
+    @media screen and (min-width: $desktop){
+        margin-right: 11px;
+        width: 24px;
+        height: 24px;
+        margin-top: 0px;
+    }
 
     @media screen and (min-width: $full){
         margin-right: 7px;
@@ -316,6 +327,7 @@ footer a.mob-social__link {
         display: flex; 
         margin: 2px -9px 0px -120px;
         justify-content: center;   
+        margin-left: -21px;
     }
     @media screen and (min-width: $desktop){
         margin-top: 103px;
