added functions for correct translation

--- a/src/styles/template-parts-styles/post-file.scss
+++ b/src/styles/template-parts-styles/post-file.scss
@@ -35,7 +35,7 @@
     margin-bottom: 0;
     width: 332px;
   }
-  @media screen and (min-width: $tablet) {
+  @media screen and (min-width: $desktop) {
     width: 342px;
   }
 }
