--- a/src/styles/template-styles/home.scss
+++ b/src/styles/template-styles/home.scss
@@ -290,6 +290,45 @@
 	}
 }
 
+.pagination-wrap {
+	@media screen and (min-width: $tablet) {
+		display: flex;
+		gap: 62px;
+		position: absolute;
+		bottom: 0;
+		left: 0;
+	}
+}
+.pagination-pos {
+	@media screen and (min-width: $tablet) {
+		display: flex;
+		position: absolute;
+		bottom: 4.5px;
+		left: 50px;
+		font-size: 18px;
+		font-weight: 500;
+		line-height: 1.3;
+	}
+}
+.custom-next-icon,
+.custom-prev-icon {
+	display: none;
+	cursor: pointer;
+
+	@media screen and (min-width: $tablet) {
+		display: block;
+		background: url("../../../assets/images/arrow-left.svg") center center no-repeat;
+		width: 32px;
+		height: 32px;
+		z-index: 10;
+	}
+}
+.custom-next-icon {
+	@media screen and (min-width: $tablet) {
+		background: url("../../../assets/images/arrow-right.svg") center center no-repeat;
+	}
+}
+
 @media screen and (min-width: $tablet) {
 	.swiper-slide {
 		width: 80%;
