added number validation

--- a/src/styles/template-styles/helpform.scss
+++ b/src/styles/template-styles/helpform.scss
@@ -298,3 +298,6 @@ textarea.contact__input {
 .wpcf7 form.sent .wpcf7-response-output {
   display: none;
 }
+input.contact__input.invalid {
+  border: 1px solid red;
+}
