--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -143,8 +143,11 @@ button {
   width: 40px;
   height: 40px;
   position: absolute;
-  top: 30px;
+  top: 27px;
   right: 16px;
+  @media screen and (min-width: $mobile) {
+    top: 30px;
+  }
 }
 
 .menu-open__btn,
