--- a/src/styles/template-parts-styles/need-help.scss
+++ b/src/styles/template-parts-styles/need-help.scss
@@ -8,17 +8,19 @@
 	gap: 32px;
 	margin-left: -16px;
 	margin-right: -16px;
+	margin-top: 65px;
 	padding: 192px 16px;
 	background-size: cover;
 	background-position: center;
 
 	@media screen and (min-width: $tablet) {
-		margin: 0 0 80px;
+		margin: 80px 0;
 		padding: 120px 16px;
 	}
 
 	@media screen and (min-width: $desktop) {
 		margin-bottom: 130px;
+		margin-top: 132px;
 		padding: 262px 16px;
 	}
 }
