--- a/src/styles/template-parts-styles/need-help-animals.scss
+++ b/src/styles/template-parts-styles/need-help-animals.scss
@@ -35,11 +35,12 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 303px;
+    width: 100%;
 	color: $white;
 	font-size: 32px;
 	font-weight: 400;
 	line-height: 1;
+	text-align: center;
 
 	@media screen and (max-width: $mobile) {
 		font-size: 29px;
@@ -49,14 +50,12 @@
 		font-size: 40px;
 		line-height: 1.4;
 		font-weight: 400;
-		width: 384px;
 		-webkit-text-stroke-width: thin;
 		margin: -41px 0 0 -1px;
 	}
 
 	@media screen and (min-width: $desktop) {
 		font-size: 48px;
-		width: 489px;
 		webkit-text-stroke-width: thin;
         margin: -58px 0 0 20px
 	}
