--- a/src/styles/template-styles/about.scss
+++ b/src/styles/template-styles/about.scss
@@ -288,6 +288,7 @@ p {
     margin-top: 10px;
   }
   @media screen and (min-width: $desktop) {
+    margin-bottom: 103px;
     margin-top: 13px;
   }
   @media screen and (min-width: $full) {
@@ -437,8 +438,8 @@ p {
     margin-top: 3px ;
     }
     @media screen and (min-width: $desktop){
-      padding-top: 26px;
-      margin-top: 3px ;
+      padding-top: 0px;
+      margin-top: 39px ;
     }
     @media screen and (min-width: $full) {
       padding-right: 25px;
