--- a/src/styles/template-styles/helpform.scss
+++ b/src/styles/template-styles/helpform.scss
@@ -4,7 +4,7 @@
 .helpform__section {
   background-color: $bg-footer;
   padding: 24px 16px 16px;
-  margin-bottom: 64px;
+  margin-bottom: 32px;
   @media screen and (min-width: $tablet) {
     padding: 0;
     background-color: $white;
@@ -17,12 +17,12 @@
     padding: 40px 116px 36px;
     background-color: $bg-footer;
     border-radius: 16px;
-    margin-bottom: 80px;
+    margin-bottom: 72px;
   }
   @media screen and (min-width: $desktop) {
     border-radius: 0;
     padding: 56px 220px 48px;
-    margin-bottom: 130px;
+    margin-bottom: 100px;
   }
 }
 
@@ -191,7 +191,19 @@ textarea.contact__input {
   }
 }
 
+.wpcf7 .wpcf7-submit:disabled {
+  background: $grey;
+  &:hover,
+  &:focus {
+    border-color: $grey;
+    transform: none;
+    box-shadow: none;
+  }
+}
+
 .required {
+  font-size: 16px;
+  font-weight: 500;
   color: #dc3232;
 }
 
