--- a/src/styles/template-styles/home.scss
+++ b/src/styles/template-styles/home.scss
@@ -412,21 +412,20 @@
 	justify-content: center;
 	align-items: center;
 	overflow: hidden;
-	height: 457px;
-
-	@media screen and (min-width: $tablet) {
-		height: 443px;
-	}
-
-	@media screen and (min-width: $desktop) {
-		height: 400px;
-	}
 
 	img {
 		width: 100%;
-		height: 100%;
+		height: 457px;
 		object-fit: cover;
 		object-position: center;
+
+		@media screen and (min-width: $tablet) {
+			height: 443px;
+		}
+
+		@media screen and (min-width: $desktop) {
+			height: 400px;
+		}
 	}
 }
 
@@ -620,7 +619,8 @@
 	}
 }
 .tabs-img {
-	width: auto;
+	width: 163px;
+	height: 167px;
 	margin-top: 16px;
 
 	@media screen and (max-width: $mobile) {
@@ -635,10 +635,11 @@
 }
 
 .tabs__wraper-btn {
-	justify-content: center;
+	margin: 0 auto;
 
 	@media screen and (min-width: $mobile) {
 		display: flex;
+		justify-content: center;
 	}
 }
 
