--- a/src/styles/template-parts-styles/content-post.scss
+++ b/src/styles/template-parts-styles/content-post.scss
@@ -40,6 +40,28 @@
   }
 }
 
+.swiper-slide {
+  position: relative;
+  padding-bottom: 140%;
+  height: 0;
+  overflow: hidden;
+}
+
+.image__wrap {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide img {
+  max-width: 100%;
+  min-height: 100%;
+  object-fit: cover;
+}
+
 // gallery
 .single-post__wrap {
   padding-bottom: 32px;
