--- a/src/styles/template-styles/helpform.scss
+++ b/src/styles/template-styles/helpform.scss
@@ -223,7 +223,7 @@ textarea.contact__input {
   background: $white;
   box-shadow: 0px 12px 12px 0px rgba(82, 113, 255, 0.04);
   opacity: 0;
-  transition: transform 250ms var(--timing-funcion);
+  transition: $transition-function;
   @media screen and (min-width: $tablet) {
     padding: 56px 83px;
     border-radius: 24px;
