--- a/src/styles/template-parts-styles/content-post.scss
+++ b/src/styles/template-parts-styles/content-post.scss
@@ -8,7 +8,7 @@
   @media screen and (min-width: $desktop) {
     line-height: 1;
   }
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: 1200px) {
     font-size: 32px;
     margin-bottom: 40px;
   }
@@ -23,7 +23,7 @@
     width: 609px;
     margin-bottom: 40px;
   }
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: 1200px) {
     font-size: 18px;
     width: 850px;
     margin-bottom: 56px;
@@ -40,14 +40,14 @@
   }
 }
 
-.swiper-slide {
+.img-slider__image {
   position: relative;
   padding-bottom: 110%;
   height: 0;
   overflow: hidden;
 }
 
-.image__wrap {
+.one-image__wrap {
   display: block;
   position: absolute;
   top: 0;
@@ -56,7 +56,7 @@
   height: 100%;
 }
 
-.swiper-slide img {
+.one-image__wrap img {
   max-width: 100%;
   min-height: 100%;
   object-fit: cover;
