--- a/src/styles/template-parts-styles/post-file.scss
+++ b/src/styles/template-parts-styles/post-file.scss
@@ -9,9 +9,6 @@
     height: 343px;
     max-width: fit-content;
   }
-  @media screen and (min-width: $desktop) {
-    max-width: fit-content;
-  }
 }
 
 .post-box:not(:last-child) {
@@ -25,23 +22,38 @@
 }
 
 .feature-image {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 24px;
   position: relative;
   overflow: hidden;
+  margin-bottom: 24px;
+  @media screen and (max-width: 767px) {
+    height: 0;
+    padding-bottom: 110%;
+  }
   @media screen and (min-width: $tablet) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-bottom: 0;
     width: 332px;
   }
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: 1200px) {
     width: 342px;
   }
 }
 
 .feature-image__link {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
+  height: 100%;
+}
+
+.feature-image__link img {
+  max-width: 100%;
+  min-height: 100%;
+  object-fit: cover;
 }
 
 .description {
@@ -49,7 +61,7 @@
     padding: 20px 20px 0 24px;
     width: 356px;
   }
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: 1200px) {
     padding: 24px 64px 0;
     width: 618px;
   }
@@ -62,7 +74,7 @@
     font-size: 18px;
     margin-bottom: 12px;
   }
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: 1200px) {
     margin-bottom: 16px;
   }
 }
@@ -74,7 +86,7 @@
   @media screen and (min-width: $tablet) {
     margin-bottom: 24px;
   }
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: 1200px) {
     font-size: 22px;
   }
 }
@@ -95,7 +107,7 @@
     width: fit-content;
     margin-top: 24px;
   }
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: 1200px) {
     margin-top: 32px;
   }
 
